--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div>
         Please register to continue
     </div>
+<div style="width: 500px; height: 500px; background-color: bisque;">
    <form>
     <div>
         <input type="text" name="username" placeholder="Enter your username">
@@ -49,5 +50,7 @@
 
     <button>Submit</button>
    </form>
+
+   </div>
 </body>
 </html>
