Javascript Events, DOM

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
 
-    
+    <section class="header">
+        <div>
+            <a href="register.html" >Register</a>
+        </div>
+        <div>
+            <a href="login.html" >Login</a>
+        </div>
+        <div>
+            <a href="" >Products</a>
+        </div>
+    </section>
     
     <div style="text-align: center;">
         <h3>Swarnandhra E-Commerce</h3>
@@ -24,35 +34,29 @@
         Hello
     </span> -->
 
-    <div>
-        Please register to continue
+    <div id="apple">
+
     </div>
-<div class="register-form">
-   <form>
-    <div>
-        <input type="text" name="username" placeholder="Enter your username">
-    </div>
+
+    <button id="changeColor" onclick="changeColor()">Change Color</button>
 
     <div>
-        <input type="email" name="email" placeholder="Enter your email" >
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo provident excepturi sint, amet delectus sit libero eos eius adipisci. Est perferendis velit illum. 
+            Necessitatibus velit iste itaque tempore natus quo.
+        </p>
+         <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo provident excepturi sint, amet delectus sit libero eos eius adipisci. Est perferendis velit illum. 
+            Necessitatibus velit iste itaque tempore natus quo.
+        </p>
+         <p id="temp-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo provident excepturi sint, amet delectus sit libero eos eius adipisci. Est perferendis velit illum. 
+            Necessitatibus velit iste itaque tempore natus quo.
+        </p>
     </div>
 
-    <div>
-        <input type="date" name="dateofbirth" placeholder="Enter your date of birth" >
-    </div>
-
-    <div>
-        <input type="password" name="userpassword" placeholder="Enter your password" >
-    </div>
-
-     <div>
-        <input type="password" name="cnfrmpassword" placeholder="Confirm your password" >
-    </div>
-
-    <button>Submit</button>
-</form>
-
-   </div>
+    <button>Show text</button>
+   
 <div class="product-container">
 
     <div class="products">
