--- a/register.html
+++ b/register.html
@@ -11,13 +11,13 @@
         Please register to continue
     </div>
 <div class="register-form">
-   <form>
+   <form id="myForm">
     <div>
-        <input type="text" name="username" placeholder="Enter your username">
+        <input type="text" name="username" placeholder="Enter your username" id="user">
     </div>
 
     <div>
-        <input type="email" name="email" placeholder="Enter your email" >
+        <input type="email" name="email" placeholder="Enter your email" id="email" >
     </div>
 
     <div>
@@ -36,5 +36,7 @@
 </form>
 
    </div>
+
+   <script src="index.js"></script>
 </body>
 </html>
